<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="#26ade0"
    tools:context=".UpdateAllowance">

    <RelativeLayout
      android:id="@+id/relative_layout_data_entry_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/message_data_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/message_allowance_details"
            android:textColor="@android:color/black"
            android:textSize="40sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_current_allowance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/label_current_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:ems="10"
                android:gravity="start"
                android:inputType="textPersonName"
                android:text="@string/message_current_balance"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/value_current_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_current_balance"
                android:background="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/relative_layout_allowance_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative_layout_current_allowance"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/label_allowance_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:ems="10"
                android:gravity="start"
                android:inputType="textPersonName"
                android:text="@string/message_allowance_receive"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/value_allowance_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:layout_below="@+id/label_allowance_received"
                android:textSize="24dp"
                android:textStyle="bold"
                />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/button_change"
            android:textStyle="bold"
            android:textSize="30dp" />
    </RelativeLayout>



</RelativeLayout>